fix logo issue on mobile

--- a/staticapp/static/css/custom.css
+++ b/staticapp/static/css/custom.css
@@ -21,6 +21,15 @@ body {
     height:40px;
     overflow:hidden;
 }
+
+@media query {
+  .navbar-header span {
+    /* margin: 0 0px 0 0; */
+    display: inline-block;
+    margin-left: 2.5px
+  }
+}
+
 .navbar-toggle {
     z-index:3;
 }
